--- a/wedding.html
+++ b/wedding.html
@@ -57,7 +57,7 @@
                     
                     Arickathil Convension Centre <br>
                     (Amritha Auditorium), <br>
-                    Changanacherry, Kottayam <br>
+                    Changanacherry, Kottayam <br><br>
                 </a>
                 <p>
                     Muhoortham Between 10:45 am & 11:20 am <br>
